# aegis

./: .dockerignore  .env.example  .gitignore  .golangci.yml  ARCHITECTURE.md  LICENSE  Makefile  README.md  RESULTS.md  docker-compose.yml  go.work  go.work.sum
.cursor/rules/: stage-completion.mdc
.github/workflows/: ci.yml
agent-gate/: Dockerfile  README.md  go.mod
agent-gate/cmd/agent-gate/: main.go  main_test.go
agent-gate/internal/api/: server.go
agent-gate/internal/approval/: store.go
agent-gate/internal/audit/: client.go
agent-gate/internal/gate/: gate.go  gate_test.go
agent-gate/internal/mask/: mask.go  mask_test.go
agent-gate/internal/models/: types.go
agent-gate/internal/policy/: client.go
agent-gate/internal/taint/: taint.go
audit/: Dockerfile  README.md  go.mod
audit/cmd/audit/: main.go  main_test.go
audit/internal/api/: server.go  server_test.go  verify_postgres_test.go
audit/internal/models/: receipt.go
audit/internal/service/: service.go  service_test.go  trace_query_test.go
audit/internal/signer/: pkcs8.go  signer.go  signer_test.go
audit/internal/store/: memory.go  normalize.go  postgres.go  postgres_verify_test.go
dashboard/: Dockerfile  README.md  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: ApprovalsPage.tsx  AsrTrendsPage.tsx  AttackFeedPage.tsx  AuditLogPage.tsx  PolicyEditorPage.tsx  ToolMatrixPage.tsx
deploy/helm/: README.md
deploy/postgres/init/: 001_schema.sql
examples/: README.md
examples/chatbot/: README.md  chatbot.py
examples/rag-taint/: README.md  rag_taint.py
examples/tool-agent/: README.md  tool_agent.py
gateway/: Dockerfile  README.md  go.mod
gateway/cmd/gateway/: main.go  main_test.go
gateway/internal/api/: server.go
input-defense/: Dockerfile  README.md  pyproject.toml
input-defense/scripts/: run_ablation_study.py  run_fixture_metrics.py
input-defense/src/aegis_input_defense/: __init__.py  app.py  audit_client.py  fusion.py  main.py  metrics.py  models.py  service.py  settings.py
input-defense/src/aegis_input_defense/detectors/: __init__.py  base.py  heuristic.py  known_answer.py  perplexity.py  perplexity_lm.py  perplexity_trigram.py  registry.py  spotlighting.py
input-defense/src/aegis_input_defense/detectors/classifier/: __init__.py  backend.py  detector.py  prompt_guard_backend.py  stub_backend.py
input-defense/src/aegis_input_defense/ml/: __init__.py  loader.py
input-defense/tests/: conftest.py  test_ablation.py  test_api.py  test_audit_emit.py  test_detectors.py  test_fixture_metrics.py  test_fixtures.py  test_fusion.py  test_health.py  test_ml_backends.py
input-defense/tests/fixtures/: prompts.yaml
model-router/: Dockerfile  README.md  go.mod
model-router/config/: providers.yaml
output-defense/: Dockerfile  README.md  pyproject.toml
output-defense/scripts/: run_ablation_study.py  run_fixture_metrics.py  run_judge_smoke.py
output-defense/src/aegis_output_defense/: __init__.py  app.py  audit_client.py  backend_audit.py  fusion.py  main.py  metrics.py  models.py  normalize.py  provenance.py  service.py  settings.py
output-defense/src/aegis_output_defense/clients/: __init__.py  model_router.py
output-defense/src/aegis_output_defense/detectors/: backtranslation.py  base.py  pii.py  pii_scan.py  registry.py  semantic.py
output-defense/src/aegis_output_defense/detectors/backtranslation/: __init__.py  backend.py  detector.py  router_backend.py  stub_backend.py
output-defense/src/aegis_output_defense/detectors/judge/: backend.py  detector.py  router_backend.py  stub_backend.py
output-defense/src/aegis_output_defense/detectors/toxicity/: backend.py  detector.py  harm_lexicon.py  stub_backend.py  toxic_bert_backend.py
output-defense/src/aegis_output_defense/ml/: __init__.py  loader.py
output-defense/tests/: conftest.py  test_ablation.py  test_api.py  test_detectors.py  test_fixture_metrics.py  test_fixtures.py  test_fusion.py  test_harm_framing.py  test_health.py  test_metrics_scoring.py  test_ml_backends.py  test_normalize.py  test_semantic.py
output-defense/tests/fixtures/: outputs.yaml
policy-engine/: Dockerfile  README.md  go.mod  go.sum
policy-engine/policies/: default.yaml
redteam/: Dockerfile  README.md  pyproject.toml
redteam/scripts/: run_adaptive_campaign.py  run_before_after.py  run_compound_mutation_samples.py  run_convergence_analysis.py  run_convergence_diagnostic.py  run_fixture_metrics.py  run_same_corpus_comparison.py
redteam/src/aegis_redteam/: __init__.py  app.py  main.py  metrics.py  models.py  service.py  settings.py
redteam/src/aegis_redteam/adaptive/: __init__.py  variants.py
redteam/src/aegis_redteam/baselines/: phase1_stub_bypass.yaml
redteam/src/aegis_redteam/clients/: model_router.py
redteam/src/aegis_redteam/fixtures/: attacks.yaml
redteam/src/aegis_redteam/mutation/: router_rephrase.py  strategies.py
redteam/src/aegis_redteam/probe/: bypass.py  client.py  local_stack.py
redteam/src/aegis_redteam/store/: memory.py  postgres.py
redteam/tests/: conftest.py  test_adaptive_campaign.py  test_adaptive_variants.py  test_bypass.py  test_fixture_metrics.py  test_fixtures.py  test_health.py  test_mutation.py  test_service.py
redteam/tests/fixtures/: attacks.yaml
scripts/: benchmark.sh  dev-setup.sh  e2e-agent-gate.sh  e2e-audit-pipeline.sh  e2e-audit.sh  e2e-dashboard.sh  e2e-examples.sh  e2e-output-defense.sh  e2e-redteam.sh  e2e-sdk.sh  integration  run_h3_evidence.py  validate-jsonschemas.mjs
sdk/: README.md
sdk/python/: Dockerfile  README.md  pyproject.toml
sdk/python/src/aegis_sdk/: __init__.py  anthropic_client.py  errors.py  openai_client.py  pipeline.py  settings.py
sdk/python/src/aegis_sdk/proxy/: app.py  main.py
sdk/python/tests/: test_pipeline.py  test_proxy.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  (+1 more)
shared/: README.md  buf.gen.yaml  buf.yaml
(+48 files in other folders)
