[project]
name = "aegis-output-defense"
version = "0.2.0"
description = "AEGIS output defense detector service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_output_defense"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/aegis_output_defense/detectors/**" = ["E501"]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aegis_output_defense"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
